fix code overflow

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -60,3 +60,7 @@ $fa-font-path: "/components/font-awesome/fonts";
 .reveal, .close-button{
   outline: none;
 }
+
+pre code {
+  overflow: scroll;
+}
